tests/fsharp/typecheck/sigs/neg91.bsl

neg91.fs(7,9,7,30): typecheck error FS0896: Enumerations cannot have members

neg91.fs(10,10,10,15): typecheck error FS0956: Members that extend interface, delegate or enum types must be placed in a module separate to the definition of the type. This module must either have the AutoOpen attribute or be opened explicitly by client code to bring the extension members into scope.

neg91.fs(24,13,24,16): typecheck error FS1094: The value 'x' is not accessible from this code location

neg91.fs(34,13,34,16): typecheck error FS0044: This construct is deprecated. Don't touch me

neg91.fs(44,13,44,16): typecheck error FS3003: Don't touch me

neg91.fs(54,13,54,16): typecheck error FS0057: This construct is experimental. It was just an experiment!. This warning can be disabled using '--nowarn:57' or '#nowarn "57"'.

neg91.fs(63,11,63,27): typecheck error FS3191: This literal pattern does not take arguments

neg91.fs(72,11,72,27): typecheck error FS3191: This literal pattern does not take arguments

neg91.fs(80,11,80,38): typecheck error FS3191: This literal pattern does not take arguments

neg91.fs(90,29,90,32): typecheck error FS3192: Constructors are not permitted as extension members - they must be defined as part of the original definition of the type
